mobile overflow fix for long comments

--- a/src/css/bios.less
+++ b/src/css/bios.less
@@ -142,7 +142,7 @@ img.bio-grid-img {
       transition: all 0.2s linear;
 
       @media @mobile {
-        padding: 3px;
+        padding: 6px;
       }
 
       &:hover {
