--- a/src/css/playlist.less
+++ b/src/css/playlist.less
@@ -428,6 +428,7 @@
     padding-left: 0;
     max-width: 650px;
     border-bottom: 1px solid @df-middle-gray;
+    overflow: hidden;
 
     @media @mobile {
       padding: 20px 0;
